--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,11 @@
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
+  height: 700px;
+  background-image: url(./images//Twitter.jpg);
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
 }
 
 h1,
