--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   height: 700px;
-  background-image: url(./images//Twitter.jpg);
+  background-image: url(./images//Twitter.png);
   background-position: center;
   background-repeat: repeat;
   background-size: cover;
